> [FILE:parse_2_claimsv1609.py] Updated rule "funInvalidPoint" to in claim translation
    :: Checking last rule


> [THE PROJECT] Dealing with alloc C function. The actual project status generates false positives cuz the alloc function
    :: HIP1: Adding a filed in mapping to identify what is the allocation function adopted, this way we can write a correct
            leak asssertion to.



> [THE PROJECT] ctags dependece >> http://ctags.sourceforge.net/
> [THE PROJECT] TODO: Checkout possibility to remmove ctags and networkx
> [THE PROJECT] Stop install when the requirements FAIL
> [THE PROJECT] Needed to networkx -- Adicionar no instalador no MAP wget https://bootstrap.pypa.io/ez_setup.py -O - | python >>>> pacote setupinstall
> [THE PROJECT] TODO: install test in diferent PCs
> [THE PROJECT] Checking ESBMC cuz this apt-get install libc6-dev-i386

> [FILE:create_map.py] Otimizing the time execution of args parse. The average time is 0.5s (this maybe is high)


> [FILE:create_map.py] TODO: Analyzing print in the trace log about arrays
        :: Data: in this Decl int z[4]={2,6,1,9}; is presented in the trace z = 2; :(
            ::HIP1: Try ignore the Decl put --, and for assignments consider map this a[i]
        :: In case of dynamic arrays using malloc we have a address pointed, and is not printed in the graphml :(
        :: Q1: The bench in SVCOMP adopting arrays?


> [FILE:create_map.py] Testing option of Map2Check
> [FILE:write_graphml_output.py] Testing graphml generated and the impact of not support to returnFrom

> [FILE:??????] Doing a script to simulate the SVCOMP execution call the wrapper script


> [FILE:create_map.py] TODO: Checking if is really need to identify what to print in the map list
> [FILE:create_map.py] TODO: Fixing BUG in example4.c we do catch the error
> [FILE:create_map.py] TODO: Adding in the map list a parameter to know when is to print the variable values





